--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,1 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+body{box-sizing:border-box;margin:0 auto}a{color:#fff}.container{max-width:100rem;margin:0 auto;padding:0 .9rem}.wrapper{min-height:100%;display:flex;flex-direction:column}.section__title{margin-bottom:5rem;font-size:4.8rem;font-weight:700;text-align:center}.footer{background-color:#151515;padding:5rem 0 3.2rem;color:#fff}.footer__menu{display:flex;justify-content:space-around;margin-bottom:5rem}.footer__menu-list{max-width:25rem}.footer__menu-title{font-size:1.6rem;font-weight:700;padding-bottom:2rem}.footer__menu-item+.footer__menu-item{padding-top:2rem}.app{display:flex;justify-content:center;gap:4rem}.app__item{margin-bottom:5rem}.footer__copy{max-width:87rem;margin:0 auto 3rem;text-align:center}.copy__nav-list{display:flex;justify-content:center;gap:4rem}.main{flex-grow:1}.top{text-align:center;padding-top:17rem;padding-bottom:5rem;position:absolute;z-index:5;left:0;right:0}.title{font-size:5rem;color:#fff;padding-bottom:4rem;font-weight:700}.top__link{background-color:#151515;padding:1rem;max-width:20rem;display:inline-block;text-transform:uppercase;font-size:2rem;font-weight:600;width:100%}.swiper-slide{height:100vh;background-repeat:no-repeat;background-size:cover;background-position:center}.swiper-pagination-bullet{width:4rem;height:.2rem;background-color:#151515;border-radius:0;margin:0 1rem !important}.swiper-pagination-bullet-active{height:.2rem;background-color:#fff}.swiper::after{content:"";background:rgba(21,21,21,.3);position:absolute;z-index:5;left:0;right:0;bottom:0;top:0}.why-lease{padding:15rem 0}.why__lease-list{display:grid;grid-template-columns:repeat(4, 1fr);gap:4rem;text-align:center}.why__lease-img{margin-bottom:3rem}.why__lease-item__title{margin-bottom:2rem;font-size:2.4rem;font-weight:700}.why__lease-text{text-align:left}.how-does{padding-bottom:15rem}.how-does__inner{max-width:60rem;margin:0 auto}.how-does__title{font-size:2rem;font-weight:700;padding-top:3rem}.how-does__list{padding:3rem 0 5rem;counter-reset:myCounter}.how-does__item{list-style-type:none;width:50rem;position:relative;margin-left:auto;padding-left:20rem;box-sizing:content-box;padding:1.9rem 0 1.9rem 5rem;min-height:4rem}.how-does__item+.how-does__item{margin-top:3rem}.how-does__item::before{counter-increment:myCounter;content:counter(myCounter);display:flex;justify-content:center;align-items:center;font-size:2rem;font-weight:700;background-color:#06f;width:4rem;height:4rem;border-radius:50%;color:#fff;position:absolute;left:0;top:0}.video{padding-bottom:12rem}.video__title{margin-bottom:2rem}.video__text{font-size:2rem;font-weight:700;margin-bottom:3rem;text-align:center}.video__content{display:block;margin:0 auto}.important{padding-bottom:15rem}.important__title{margin-bottom:2rem}.important__text{margin:0 auto 5rem;width:40rem}.important__list{display:grid;grid-template-columns:repeat(4, 1fr)}.important__item-img{margin-bottom:2rem}.contacts{padding:10rem 0 15rem}.contacts__title{margin-bottom:2rem}.contacts__text{text-align:center;font-weight:700;font-size:2rem;margin-bottom:4rem;padding:0 10rem}.form{max-width:52rem;margin:0 auto;display:flex;justify-content:space-between;flex-wrap:wrap}.form__textarea{width:100%;resize:none;padding:2rem 2rem;height:23rem;border:1px solid #06f;margin-bottom:5rem}.form__input{width:25rem;padding:1.8rem 2rem;display:inline-block;border:1px solid #06f;margin-bottom:5rem}.form__btn{height:4rem;width:15rem;background-color:#151515;color:#fff;text-transform:uppercase;font-size:1.6rem;cursor:pointer;margin:0 auto;font-weight:600}
